# Calculator

./: READ_ME.md  client_session_key.aes  jjcalcul.cabal
app/: devel.hs  main.hs
config/: keter.yml
