name:              jjcalcul
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         jjcalcul

    main-is:           main.hs
    hs-source-dirs:    app

    ghc-options:       -threaded -rtsopts -with-rtsopts=-N

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                

    build-depends: base
                 , yesod-core
                 , yesod
                 , classy-prelude
                 , classy-prelude-yesod
                 , text
